kong/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: kong:apps/Deployment:kong/guestbook-ui
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"kong:apps/Deployment:kong/guestbook-ui"},"name":"guestbook-ui","namespace":"kong"},"spec":{"replicas":1,"revisionHistoryLimit":3,"selector":{"matchLabels":{"app":"guestbook-ui"}},"template":{"metadata":{"labels":{"app":"guestbook-ui"}},"spec":{"containers":[{"image":"gcr.io/google-samples/gb-frontend:v5","name":"guestbook-ui","ports":[{"containerPort":80}]}]}}}}
    creationTimestamp: "2026-02-26T04:21:16Z"
    generation: 1
    name: guestbook-ui
    namespace: kong
    resourceVersion: "5841972"
    uid: 8cdf9395-0f92-4557-b4bf-a1eb735f8dbf
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 3
    selector:
      matchLabels:
        app: guestbook-ui
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: guestbook-ui
      spec:
        containers:
        - image: gcr.io/google-samples/gb-frontend:v5
          imagePullPolicy: IfNotPresent
          name: guestbook-ui
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T04:21:19Z"
      lastUpdateTime: "2026-02-26T04:21:19Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-02-26T04:21:16Z"
      lastUpdateTime: "2026-02-26T04:21:19Z"
      message: ReplicaSet "guestbook-ui-84774bdc6f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      field.cattle.io/publicEndpoints: '[{"port":31073,"protocol":"TCP","serviceName":"kong:kong-gateway-kong-admin","allNodes":true},{"port":31012,"protocol":"TCP","serviceName":"kong:kong-gateway-kong-admin","allNodes":true}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kong-gateway-kong","namespace":"kong"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"kong-gateway-kong"}},"template":{"metadata":{"labels":{"app":"kong-gateway-kong"}},"spec":{"containers":[{"env":[{"name":"CONTROLLER_INGRESS_CLASS","value":"kong"},{"name":"CONTROLLER_PUBLISH_SERVICE","value":"kong/kong-gateway-kong-proxy"},{"name":"CONTROLLER_KONG_ADMIN_URL","value":"https://localhost:8444"},{"name [...]
    creationTimestamp: "2026-02-26T00:27:40Z"
    generation: 6
    name: kong-gateway-kong
    namespace: kong
    resourceVersion: "5814288"
    uid: 443c5490-7755-4849-a281-05c2656c83f4
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: kong-gateway-kong
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: kong-gateway-kong
      spec:
        containers:
        - env:
          - name: CONTROLLER_INGRESS_CLASS
            value: kong
          - name: CONTROLLER_PUBLISH_SERVICE
            value: kong/kong-gateway-kong-proxy
          - name: CONTROLLER_KONG_ADMIN_URL
            value: https://localhost:8444
          - name: CONTROLLER_KONG_ADMIN_TLS_SKIP_VERIFY
            value: "true"
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: LOG_LEVEL
            value: info
          image: kong/kubernetes-ingress-controller:3.5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: ingress-controller
          ports:
          - containerPort: 8080
            name: webhook
            protocol: TCP
          - containerPort: 10255
            name: cmetrics
            protocol: TCP
          - containerPort: 10254
            name: cstatus
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
          - name: KONG_ADMIN_LISTEN
            value: 0.0.0.0:8001, 0.0.0.0:8444 ssl
          - name: KONG_STATUS_LISTEN
            value: 0.0.0.0:8100
          - name: KONG_DATABASE
            value: postgres
          - name: KONG_PG_HOST
            value: kong-postgresql.kong.svc.cluster.local
          - name: KONG_PG_USER
            value: kong
          - name: KONG_PG_PASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: kong-postgresql
          - name: KONG_PG_DATABASE
            value: kong
          - name: KONG_PG_PORT
            value: "5432"
          - name: KONG_PROXY_ACCESS_LOG
            value: /dev/stdout
          - name: KONG_PROXY_ERROR_LOG
            value: /dev/stderr
          - name: KONG_ADMIN_ACCESS_LOG
            value: /dev/stdout
          - name: KONG_ADMIN_ERROR_LOG
            value: /dev/stderr
          - name: KONG_LOG_LEVEL
            value: notice
          - name: KONG_NGINX_WORKER_PROCESSES
            value: "2"
          image: kong:3.9
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /status
              port: 8100
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: proxy
          ports:
          - containerPort: 8000
            name: proxy
            protocol: TCP
          - containerPort: 8443
            name: proxy-tls
            protocol: TCP
          - containerPort: 8001
            name: admin
            protocol: TCP
          - containerPort: 8444
            name: admin-tls
            protocol: TCP
          - containerPort: 8100
            name: status
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /status/ready
              port: 8100
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: kong-gateway-kong
        serviceAccountName: kong-gateway-kong
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2026-02-26T00:58:49Z"
      lastUpdateTime: "2026-02-26T00:58:49Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-02-26T00:27:40Z"
      lastUpdateTime: "2026-02-26T00:58:49Z"
      message: ReplicaSet "kong-gateway-kong-74c8b7f4db" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 6
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      field.cattle.io/publicEndpoints: '[{"port":30400,"protocol":"TCP","serviceName":"kong:konga","allNodes":true}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"konga"},"name":"konga","namespace":"kong"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"konga"}},"template":{"metadata":{"labels":{"app":"konga"}},"spec":{"containers":[{"env":[{"name":"NODE_ENV","value":"production"},{"name":"PORT","value":"1337"},{"name":"KONGA_LOG_LEVEL","value":"warn"},{"name":"KONGA_SEED_USER_DATA_SOURCE_FILE","value":"/app/seed.js"},{"name":"TOKEN_SECRET","value":"ch [...]
    creationTimestamp: "2026-02-11T18:14:10Z"
    generation: 17
    labels:
      app: konga
    name: konga
    namespace: kong
    resourceVersion: "5787297"
    uid: 5088d49e-c9e8-4f4b-ac95-f7e265770a44
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: konga
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-02-17T18:59:18+01:00"
        labels:
          app: konga
      spec:
        containers:
        - env:
          - name: NODE_ENV
            value: production
          - name: PORT
            value: "1337"
          - name: KONGA_LOG_LEVEL
            value: warn
          - name: KONGA_SEED_USER_DATA_SOURCE_FILE
            value: /app/seed.js
          - name: TOKEN_SECRET
            value: change-this-token-secret-in-production
          image: pantsel/konga:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 1337
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: konga
          ports:
          - containerPort: 1337
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 1337
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T00:26:09Z"
      lastUpdateTime: "2026-02-26T00:26:09Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-02-11T18:14:10Z"
      lastUpdateTime: "2026-02-26T00:26:09Z"
      message: ReplicaSet "konga-77458994c6" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 17
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
