kong/ingress-konga-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["95.111.234.12"],"port":443,"protocol":"HTTPS","serviceName":"kong:kong-gateway-kong-manager","ingressName":"kong:konga-ssl-ingress","hostname":"konga.abu7midan.com","path":"/","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/proxy-buffer-size":"128k","nginx.ingress.kubernetes.io/proxy-buffers":"4 256k","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"konga-ssl-ingress","namespace":"kong"},"spec":{"rules":[{"host":"konga.abu7midan.com","http":{"paths":[{"backend":{"service":{"name":"kong-gateway-kong-ma [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2026-02-11T17:15:50Z"
  generation: 1
  name: konga-ssl-ingress
  namespace: kong
  resourceVersion: "5033550"
  uid: 81ea52c0-cba7-4166-a12b-41327d856308
spec:
  rules:
    - host: konga.abu7midan.com
      http:
        paths:
          - backend:
              service:
                name: kong-gateway-kong-manager
                port:
                  number: 8002
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - konga.abu7midan.com
      secretName: konga-tls-secret
status:
  loadBalancer:
    ingress:
      - ip: 95.111.234.12
